[gd_scene format=3 uid="uid://bm4rkq15gjip5"]

[ext_resource type="Script" uid="uid://bsms1wcqsknnf" path="res://scripts/ui/avatar_creator_controller.gd" id="1_creator"]

[node name="AvatarCreator" type="Control" unique_id=2107719635]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_creator")

[node name="Background" type="ColorRect" parent="." unique_id=190719437]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="TitleBar" type="Panel" parent="." unique_id=1181400570]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="TitleBar" unique_id=51924498]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Creador de Avatares"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PreviewPanel" type="Panel" parent="." unique_id=1027308350]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -250.0
offset_right = 520.0
offset_bottom = 250.0
grow_vertical = 2

[node name="AvatarPreview" type="Node2D" parent="PreviewPanel" unique_id=27825364]
position = Vector2(250, 250)

[node name="ViewToggleButton" type="Button" parent="PreviewPanel" unique_id=606775002]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Vista: IsomÃ©trica"

[node name="RightPanel" type="Panel" parent="." unique_id=129277169]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -450.0
offset_top = 60.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="RightPanel" unique_id=642486928]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Spacer1" type="Control" parent="RightPanel/VBoxContainer" unique_id=518284513]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="BasicInfo" type="VBoxContainer" parent="RightPanel/VBoxContainer" unique_id=1173609110]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="RightPanel/VBoxContainer/BasicInfo" unique_id=1441570508]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "InformaciÃ³n BÃ¡sica"

[node name="NameLabel" type="Label" parent="RightPanel/VBoxContainer/BasicInfo" unique_id=523924605]
layout_mode = 2
text = "Nombre del Personaje:"

[node name="NameInput" type="LineEdit" parent="RightPanel/VBoxContainer/BasicInfo" unique_id=902641580]
layout_mode = 2
placeholder_text = "Ej: Aria la Valiente"
max_length = 30

[node name="BackstoryLabel" type="Label" parent="RightPanel/VBoxContainer/BasicInfo" unique_id=179316466]
layout_mode = 2
text = "Historia (Opcional):"

[node name="BackstoryInput" type="TextEdit" parent="RightPanel/VBoxContainer/BasicInfo" unique_id=1459003442]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
placeholder_text = "Una breve descripciÃ³n de tu personaje..."

[node name="Separator1" type="HSeparator" parent="RightPanel/VBoxContainer" unique_id=255835347]
layout_mode = 2

[node name="IsometricPanel" type="VBoxContainer" parent="RightPanel/VBoxContainer" unique_id=1853971207]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="RightPanel/VBoxContainer/IsometricPanel" unique_id=678871817]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Vista IsomÃ©trica"

[node name="BodyLabel" type="Label" parent="RightPanel/VBoxContainer/IsometricPanel" unique_id=151280644]
layout_mode = 2
text = "Cuerpo:"

[node name="BodySpinBox" type="SpinBox" parent="RightPanel/VBoxContainer/IsometricPanel" unique_id=1158776777]
layout_mode = 2
max_value = 10.0
rounded = true

[node name="HairLabel" type="Label" parent="RightPanel/VBoxContainer/IsometricPanel" unique_id=1021750745]
layout_mode = 2
text = "Cabello:"

[node name="HairSpinBox" type="SpinBox" parent="RightPanel/VBoxContainer/IsometricPanel" unique_id=1394451618]
layout_mode = 2
max_value = 10.0
rounded = true

[node name="OutfitLabel" type="Label" parent="RightPanel/VBoxContainer/IsometricPanel" unique_id=788562186]
layout_mode = 2
text = "Outfit:"

[node name="OutfitSpinBox" type="SpinBox" parent="RightPanel/VBoxContainer/IsometricPanel" unique_id=1886798999]
layout_mode = 2
max_value = 10.0
rounded = true

[node name="Separator2" type="HSeparator" parent="RightPanel/VBoxContainer" unique_id=815020227]
layout_mode = 2

[node name="SideviewPanel" type="VBoxContainer" parent="RightPanel/VBoxContainer" unique_id=879530340]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="RightPanel/VBoxContainer/SideviewPanel" unique_id=2058283153]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Vista Lateral"

[node name="HeadLabel" type="Label" parent="RightPanel/VBoxContainer/SideviewPanel" unique_id=535981997]
layout_mode = 2
text = "Cabeza:"

[node name="HeadSpinBox" type="SpinBox" parent="RightPanel/VBoxContainer/SideviewPanel" unique_id=1772628434]
layout_mode = 2
max_value = 10.0
rounded = true

[node name="TorsoLabel" type="Label" parent="RightPanel/VBoxContainer/SideviewPanel" unique_id=517707785]
layout_mode = 2
text = "Torso:"

[node name="TorsoSpinBox" type="SpinBox" parent="RightPanel/VBoxContainer/SideviewPanel" unique_id=1818641723]
layout_mode = 2
max_value = 10.0
rounded = true

[node name="LegsLabel" type="Label" parent="RightPanel/VBoxContainer/SideviewPanel" unique_id=1580032721]
layout_mode = 2
text = "Piernas:"

[node name="LegsSpinBox" type="SpinBox" parent="RightPanel/VBoxContainer/SideviewPanel" unique_id=111178992]
layout_mode = 2
max_value = 10.0
rounded = true

[node name="HairLabel" type="Label" parent="RightPanel/VBoxContainer/SideviewPanel" unique_id=140629420]
layout_mode = 2
text = "Cabello:"

[node name="HairSpinBox" type="SpinBox" parent="RightPanel/VBoxContainer/SideviewPanel" unique_id=293477484]
layout_mode = 2
max_value = 10.0
rounded = true

[node name="Spacer2" type="Control" parent="RightPanel/VBoxContainer" unique_id=1947753112]
layout_mode = 2
size_flags_vertical = 3

[node name="Actions" type="VBoxContainer" parent="RightPanel/VBoxContainer" unique_id=1245273452]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RandomizeButton" type="Button" parent="RightPanel/VBoxContainer/Actions" unique_id=218361253]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "ðŸŽ² Aleatorio"

[node name="SaveButton" type="Button" parent="RightPanel/VBoxContainer/Actions" unique_id=2074573991]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ðŸ’¾ Guardar Avatar"

[node name="CancelButton" type="Button" parent="RightPanel/VBoxContainer/Actions" unique_id=1608143735]
layout_mode = 2
text = "Cancelar"

[node name="Spacer3" type="Control" parent="RightPanel/VBoxContainer" unique_id=208984009]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
